# PNLX

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  ecosystem.config.cjs  package.json  tsconfig.json
circuits/batch-match/: Nargo.toml  Prover.toml
circuits/batch-match/src/: main.nr
circuits/conditional-close/: Nargo.toml  Prover.toml
circuits/conditional-close/src/: main.nr
circuits/deposit-note/: Nargo.toml  Prover.toml
circuits/deposit-note/src/: main.nr
circuits/disclosure/: Nargo.toml  Prover.toml
circuits/disclosure/src/: main.nr
circuits/funding-update/: Nargo.toml  Prover.toml
circuits/funding-update/src/: main.nr
circuits/intent-validity/: Nargo.toml  Prover.toml
circuits/intent-validity/src/: main.nr
circuits/liquidation-check/: Nargo.toml  Prover.toml
circuits/liquidation-check/src/: main.nr
circuits/margin-check/: Nargo.toml  Prover.toml
circuits/margin-check/src/: main.nr
circuits/position-close/: Nargo.toml  Prover.toml
circuits/position-close/src/: main.nr
circuits/position-transition/: Nargo.toml  Prover.toml
circuits/position-transition/src/: main.nr
circuits/withdraw/: Nargo.toml  Prover.toml
circuits/withdraw/src/: main.nr
client/: .env.example  next.config.ts  package.json
client/src/app/: globals.css  layout.tsx
client/src/components/: account-strip.tsx  app-shell.tsx  bottom-ticker.tsx  chart-toolbar.tsx  market-header.tsx  order-ticket.tsx  pnl-modal.tsx  portfolio-page.tsx  portfolio-route.tsx  positions-table.tsx  price-chart.tsx  trading-page.tsx
client/src/data/: landing-content.ts  mock-trading-data.ts
client/src/lib/: account-encryption.ts  asset-units.ts  client-proof-provider.ts  collateral-withdraw.ts  conditional-orders.ts  custody-deposit.ts  format.ts  merkl-api.ts  order-cancel.ts  pnlx-api.ts  position-close.ts  private-margin-notes.test.ts  private-margin-notes.ts  private-note.ts  (+8 more)
contracts/: Cargo.toml
contracts/batch-settlement/: Cargo.toml
contracts/batch-settlement/src/: lib.rs
contracts/conditional-order/: Cargo.toml
contracts/conditional-order-interface/: Cargo.toml
contracts/conditional-order-interface/src/: lib.rs
contracts/conditional-order/src/: lib.rs
contracts/disclosure-verifier/: Cargo.toml
contracts/disclosure-verifier/src/: lib.rs
contracts/funding-settlement/: Cargo.toml
contracts/funding-settlement/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance-interface/: Cargo.toml
contracts/governance-interface/src/: lib.rs
contracts/governance/src/: lib.rs
contracts/intent-registry/: Cargo.toml
contracts/intent-registry-interface/: Cargo.toml
contracts/intent-registry-interface/src/: lib.rs
contracts/intent-registry/src/: lib.rs
contracts/liquidation/: Cargo.toml
contracts/liquidation/src/: lib.rs
contracts/market/: Cargo.toml
contracts/market-interface/: Cargo.toml
contracts/market-interface/src/: lib.rs
contracts/market/src/: lib.rs
contracts/mock-oracle/: Cargo.toml
contracts/mock-oracle/src/: lib.rs
contracts/oracle-interface/: Cargo.toml
contracts/oracle-interface/src/: lib.rs
contracts/position-close/: Cargo.toml
contracts/position-close/src/: lib.rs
contracts/position-state/: Cargo.toml
contracts/position-state-interface/: Cargo.toml
contracts/position-state-interface/src/: lib.rs
contracts/position-state/src/: lib.rs
contracts/price-oracle/: Cargo.toml
contracts/price-oracle/src/: lib.rs
contracts/proof-ledger/: Cargo.toml
contracts/proof-ledger-interface/: Cargo.toml
contracts/proof-ledger-interface/src/: lib.rs
contracts/proof-ledger/src/: lib.rs
contracts/proof-verifier/: Cargo.toml
contracts/proof-verifier/src/: lib.rs
contracts/risc0-proof-verifier/: Cargo.toml
contracts/risc0-proof-verifier/src/: lib.rs
contracts/shielded-pool/: Cargo.toml
contracts/shielded-pool/src/: lib.rs
contracts/test-oracle/: Cargo.toml
contracts/test-oracle/src/: lib.rs
contracts/ultrahonk-verifier/: Cargo.toml
deployments/: local.json  testnet-20260629-committee.json  testnet-20260630-mpspdz.json  testnet-20260701-pnlx-e2e.json  testnet-20260701-pnlx.json  testnet-20260703-fresh.json  testnet-20260703-risc0-e2e.json  testnet-20260704-auth-fix.json  testnet-20260705-field-fix.json  testnet-legacy-position-reconciliation.json  testnet.json
docs/: architecture.md  pnlx-overview.md
risc0/batch-match/: Cargo.toml  image-id.json
risc0/batch-match/core/: Cargo.toml
risc0/batch-match/core/src/: lib.rs
risc0/batch-match/host/: Cargo.toml
risc0/batch-match/host/src/: main.rs
risc0/batch-match/methods/: Cargo.toml  build.rs
risc0/batch-match/methods/guest/: Cargo.toml
risc0/batch-match/methods/guest/src/: main.rs
scripts/: oracle-keeper.ts
scripts/collateral/: setup-test-usdc.ts
scripts/deploy/: finalize.ts  manifest.ts  run.ts
scripts/operations/: bootstrap-protocol-transition.ts  export-protocol-transition.ts  migrate-protocol-state.ts  reconcile-legacy-positions.ts
scripts/oracle/: configure-committee.ts
scripts/proof/: build.ts
scripts/prover/: local-client-prover.ts
scripts/smoke/: custody.ts  repair-account-events.ts  trade.ts
server/: package.json  tsconfig.json
server/docker/: blind-compute.Dockerfile  matcher-provider.Dockerfile  mpspdz-local.compose.yml  mpspdz-party-entrypoint.sh  mpspdz-party.Dockerfile  mpspdz-setup.sh  nilcc-blind-compute.compose.yml  nilcc-matcher-provider.compose.yml
server/mpspdz/: merkl_batch_match.mpc
server/src/: app.ts  blind-compute-server.ts  index.ts  matcher-provider-server.ts  matcher-server.ts  server.ts
tests/e2e/: api.test.ts  artifact-registry.test.ts  circuit-privacy.test.ts  client-prover.test.ts  custody-smoke.test.ts  deploy-run.test.ts  deploy.test.ts  funding-premium.test.ts  funding-settlement.test.ts  indexer.test.ts  legacy-position-reconciliation.test.ts  maker-liquidity.test.ts  mongo-normalized-snapshot.test.ts  mongo-snapshot.test.ts  orderbook.test.ts  position-accumulator.test.ts  private-batch.test.ts  risc0-proof.test.ts  state-retention.test.ts  workers.test.ts
(+235 files in other folders)
