[package]
name = "batch-settlement"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "batch_settlement"

[dependencies]
governance-interface = { path = "../governance-interface" }
intent-registry-interface = { path = "../intent-registry-interface" }
market-interface = { path = "../market-interface" }
position-state-interface = { path = "../position-state-interface" }
proof-ledger-interface = { path = "../proof-ledger-interface" }
soroban-sdk = { workspace = true }

[dev-dependencies]
governance = { path = "../governance" }
intent-registry = { path = "../intent-registry" }
market = { path = "../market" }
mock-oracle = { path = "../mock-oracle" }
oracle-interface = { path = "../oracle-interface" }
position-state = { path = "../position-state" }
proof-ledger = { path = "../proof-ledger" }
soroban-sdk = { workspace = true, features = ["testutils"] }
