[package]
name = "position-state"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "position_state"

[dependencies]
governance-interface = { path = "../governance-interface" }
soroban-sdk = { workspace = true }

[dev-dependencies]
governance = { path = "../governance" }
soroban-sdk = { workspace = true, features = ["testutils"] }
