[package]
name = "proof-ledger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "proof_ledger"

[dependencies]
governance-interface = { path = "../governance-interface" }
soroban-sdk = { workspace = true }

[dev-dependencies]
governance = { path = "../governance" }
soroban-sdk = { workspace = true, features = ["testutils"] }
