[package]
name = "shielded-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "shielded_pool"

[dependencies]
governance-interface = { path = "../governance-interface" }
proof-ledger-interface = { path = "../proof-ledger-interface" }
soroban-sdk = { workspace = true }

[dev-dependencies]
governance = { path = "../governance" }
proof-ledger = { path = "../proof-ledger" }
soroban-sdk = { workspace = true, features = ["testutils"] }
